# calorie-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  calorie-bot-spec.md  config.py  main.py  pyproject.toml  scheduler.py
docs/: cli-model-tracking-design.md  prompt-260311 - gemini.txt  prompt-260311.txt  research-telegram-ai-obsidian.md
docs/superpowers/plans/: 2026-03-12-food-cache.md
docs/superpowers/specs/: 2026-03-12-food-cache-design.md
handlers/: backfill.py  correction.py  food_cache.py  goal.py  manual_meal.py  meal.py  query.py  report.py  tdee.py  weight.py
services/: ai.py  db.py  nutrition.py
tests/: test_ai.py  test_backfill.py  test_correction.py  test_cost.py  test_food_cache.py  test_manual_meal.py  test_nutrition.py  test_report.py
