[project]
name = "calorie-bot"
version = "0.1.0"
description = "Telegram calorie tracking bot powered by Claude Vision"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "apscheduler>=3.11.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.6",
    "supabase>=2.28.0",
]
